# CoupledCluster

./: .buildinfo  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js
.githooks/: pre-commit
.github/: .licenserc.yaml
.github/workflows/: c-cpp.yaml  format.yaml  lint.yaml  merge.yaml  pull_request.yaml
CoupledCluster/: CMakeLists.txt  CoupledCluster.cpp
_sources/: index.rst.txt
_sources/module_api/: CCSD_Energy.rst.txt  index.rst.txt
ci/reference_output/: ubiquitin_dgrtl.sto-3g.ccsd_t.json
ci/scripts/: compare_results.py
cmake/: check_user_env.cmake
coupledcluster_cxx_api/: coupledcluster_8hpp_source.html  coupledcluster__mm_8hpp_source.html  coupledcluster__modules_8hpp_source.html  dir_15b85f24a36b99cadbbdeef9096fe628.html  dir_21accb2c8117455710969dbfe13104b5.html  dir_5c0d64f70903e893b1efe571a4b8de29.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  graph_legend.html  index.html  property__types_8hpp_source.html
docs/: README.md  install.md  make.bat  requirements.txt
docs/schema/: README.md  input_schema.json
docs/source/: conf.py
docs/source/module_api/: index.rst
examples/driver/: ccsd_driver.cpp
include/cc/: cc.hpp  cc_mm.hpp  ccsd.hpp  ccsd_mm.hpp  property_types.hpp  types.hpp
include/coupledcluster/: coupledcluster.hpp  coupledcluster_mm.hpp  property_types.hpp
inputs/: example.json  ubiquitin_dgrtl.json
inputs/radon/: radon1_hs.json  radon1_ls.json  radon2_hs.json  radon2_ls.json  radon3_hs.json  radon3_ls.json  radon4_hs.json  radon4_ls.json
methods/: CMakeLists.txt
methods/cc/: CCSD_Canonical.cpp  CD_CCSD.cpp  CholeskyDecomp.cpp  ccsd_canonical.hpp  ccsd_util.hpp  ccse_tensors.hpp  cd_ccsd_cs_ann.hpp  cd_ccsd_os_NK.hpp  cd_ccsd_os_ann.hpp  diis.hpp
methods/cc/ccsd_t/: CCSD_T.cpp  CCSD_T_Old.cpp  ccsd_t.cmake  ccsd_t_all_fused.hpp  ccsd_t_all_fused_cpu.hpp  ccsd_t_all_fused_doubles1.hpp  ccsd_t_all_fused_doubles2.hpp  ccsd_t_all_fused_gpu.cu  ccsd_t_all_fused_hip.hpp  ccsd_t_all_fused_nontcCuda_Hip_Sycl.cpp  ccsd_t_all_fused_singles.hpp  ccsd_t_all_fused_sycl.hpp  ccsd_t_common.hpp  ccsd_t_doubles_unfused.hpp  ccsd_t_doubles_unfused_cpu.hpp  ccsd_t_fused_driver.hpp  ccsd_t_g2s_device_functions.cu  ccsd_t_singles_unfused.hpp  ccsd_t_singles_unfused_cpu.hpp  ccsd_t_unfused_driver.hpp  check_gpu_mem.py  fused_common.hpp  hybrid.cpp  memory.cpp  sd_t_total_cpu.cpp  sd_t_total_gpu.cu  sd_t_total_nwc.cu  sd_t_total_nwc.hip.hpp  tensor_core_helper.cuh
methods/cc/cd_svd/: cd_svd.hpp  cd_svd_ga.hpp  cd_svd_shell_tiling.hpp  two_index_transform.hpp
methods/common/: cutils.hpp  input_parser.hpp  json_data.hpp  misc.hpp  molden.hpp
methods/scf/: HartreeFock.cpp  scf_common.hpp  scf_guess.hpp  scf_iter.hpp  scf_main.hpp  scf_taskmap.hpp
module_api/: CCSD_Energy.html  index.html
src/cc/: cc_mm.cpp  cc_modules.hpp  ccsd.cpp  ccsd_mm.cpp  ccsd_util.hpp  ccse_tensors.hpp  cd_ccsd_cs_ann.hpp  diis.hpp  energy.hpp
src/cc/ccsd_t/: ccsd_t_all_fused.hpp  ccsd_t_all_fused_cpu.hpp  ccsd_t_all_fused_doubles1.hpp  ccsd_t_all_fused_doubles2.hpp  ccsd_t_all_fused_gpu.cu  ccsd_t_all_fused_nontcCuda_Hip_Sycl.hpp  ccsd_t_all_fused_singles.hpp  ccsd_t_common.hpp  ccsd_t_fused_driver.hpp  fused_common.hpp  hybrid.cpp  memory.cpp  tensor_core_helper.cuh
src/cc/cd_svd/: cd_svd_ga.hpp  two_index_transform.hpp
src/cc/common/: json_data.hpp  utils.hpp
src/coupledcluster/: ccsd.cpp  coupledcluster_mm.cpp  coupledcluster_modules.hpp
src/python/: export_cc.cpp  export_coupledcluster.cpp
tests/: ccsd.cpp  main.cpp
tests/cxx/: main.cpp  test_ccsd.cpp
tests/python/: molecules.py  test_ccsd.py
tests/python/unit_tests/: test_ccsd.py
